data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2125.wast
;; 6. **Invalid `block` Nesting**:    - **Test Description**: Have a `block` that contains improperly nested loops leading to an endless execution path because the blocks are not correctly closed.    - **Constraint**: Ensuring correct nesting of blocks so that control flow can properly escape loops.    - **Relation to Infinite Loops**: Incorrectly nested blocks can prevent proper loop termination.

(assert_invalid
  (module
    (func $invalid-nesting
      (block 
        (loop 
          (block end)
          (br 1)
        end)
    ))
  )
  "unexpected end"
)